# Assistant

./: .gitignore  README-EN.md  README.md  index.html  package-lock.json  package.json  run.bat  run.sh  tsconfig.json  vite.config.ts
public/: buildprompt.js  example  fireworks.html
src/: App.vue  AssistantMainView.vue  Empty.vue  config.ts  data.ts  global.ts  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resource/: defaultprompt.txt
src-tauri/resources/: api_key
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/assistant/: mod.rs  rolecard.rs
src-tauri/src/assistant/conversation/: mod.rs  talkcontext.rs
src-tauri/src/assistant/life/: mod.rs  schedule.rs
src-tauri/src/assistant/think/: mod.rs
src-tauri/src/conversation/: mod.rs  step_talk.rs  talkcontext.rs
src-tauri/src/data/: mcp.rs  mod.rs  server_data.rs
src-tauri/src/event/: mod.rs
src-tauri/src/mcp/: client.rs  internal_server.rs  mod.rs  server.rs  server_operation.rs
src-tauri/src/mcp/character/: mod.rs
src-tauri/src/mcp/schedule/: mod.rs  sche_item.rs
src-tauri/src/mcp/systemutil/: mod.rs
src-tauri/src/model/: deepseek.rs  mod.rs  modelbase.rs  ollama.rs
src-tauri/src/platform/: application.rs  file.rs  mod.rs  window.rs
src-tauri/src/web/: http.rs
src/components/: Bubbles.vue  ChatInput.vue  Conversation.vue  FileUpload.vue  SphereButton.vue  Toast.vue
src/data/: mcp.ts  model.ts  prompt.ts  store.ts
src/events/: model_event.ts  window_event.ts
src/frontend/: MCPClient.ts  MCPServer.ts  chat.ts  command_process.ts  frontenddata.ts  typescript_process.ts
src/lib/: deepseek.ts  llm_action.ts  llm_base.ts  llm_interface.ts  mcp.ts  (+2 more)
(+36 files in other folders)
