[package]
name = "assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-dialog = "2"
walkdir = "2.5.0"
lnk_parser = "0.4.0"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-autostart = "2.0.0"
reqwest = "0.12.12"
urlencoding = "2.1"
project-root = "0.2.2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
log = "0.4"
tauri-plugin-log = "2"
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
directories = "5.0"
lazy_static = "1.4.0"
chrono = "0.4.41"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.26.0"
